# Inter-IIT-13.0-mid-prep-Bharat-Forge-PS

./: .gitignore  README.md  instructions.txt  requirements
src/: items.txt
src/Task_Allocation/: .env  Allocator.py  Allocator_alpha.py  Goal_Publisher.py  Interface.py  LLM.py  Model.keras  Task_Allocation.py  main.ipynb  main.py  requirements.txt  weightalgo.py  weightpy.py
src/Task_Allocation/Agents/: AgentsLLM.py  DocumentRelevanceChecker.py  Generator.py  OutputRelevanceChecker.py  QueryExpander.py  QueryRewriter.py  QueryRouter.py  VectorStoreRetriever.py  WebSearcher.py
src/Task_Allocation/Documents/: items.txt
src/Task_Allocation/Submodules/: QueryExpansionModule.py  QueryRewriteModule.py  SubModuleLLM.py  SubQueryModule.py
src/Task_Allocation/Tools/: DuckDuckGoSearch.py  Wikipedia.py
src/motion_planning/src/path_planner/: CMakeLists.txt
src/motion_planning/src/path_planner/src/: path_planner_node.cpp
src/motion_planning/src/path_planner/src/graph_planner/: dstar_lite_planner.cpp  dstar_planner.cpp
src/multiple_turtlebot3/: package.xml  robot1  robot2  robot3  robot4
src/multiple_turtlebot3/launch/: amcl_diff.launch  move_base.launch  multiple_turtlebot3.launch  one_robot.launch  robots.launch
src/multiple_turtlebot3/map/: map.pgm
src/multiple_turtlebot3/models/: model.sdf
src/multiple_turtlebot3/param/: costmap_common_params_waffle_robot1.yaml  costmap_common_params_waffle_robot2.yaml  costmap_common_params_waffle_robot3.yaml  costmap_common_params_waffle_robot4.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params_robot1.yaml  (+11 more)
(+11 files in other folders)
